# klickety

./: .flatpak-manifest.json  .kde-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  Mainpage.dox  Makefile.am  Messages.sh  README  README.THEMES  bgselector.h  bgselector.ui  bgselectorconfig.h  bgselectorconfig.ui  board.cpp  board.h  customgame.h  customgame.ui  customgameconfig.h  eventsrc  field.cpp  field.h  gameconfig.h  gameconfig.ui  gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  highscores.cpp  highscores.h  klboard.cpp  klboard.h  klfactory.cpp  klfactory.h  klickety-2.0-inherit-ksame-highscore.pl  klickety.desktop  klickety.kcfg  klickety.notifyrc  klicketyconfig.rc  klicketyui.rc  (+15 more)
doc/: CMakeLists.txt  index.docbook
pics/: CMakeLists.txt  Makefile.am
po/ar/: klickety.po
po/ast/: klickety.po
po/bg/: klickety.po
po/bs/: klickety.po
po/ca/: klickety.po
po/ca/docs/klickety/: index.docbook
po/ca@valencia/: klickety.po
po/cs/: klickety.po
po/da/: klickety.po
po/de/: klickety.po
po/de/docs/klickety/: index.docbook
po/el/: klickety.po
po/en_GB/: klickety.po
po/eo/: klickety.po
po/es/: klickety.po
po/es/docs/klickety/: index.docbook
po/et/: klickety.po
po/et/docs/klickety/: index.docbook
po/eu/: klickety.po
po/fi/: klickety.po
po/fr/: klickety.po
po/fr/docs/klickety/: index.docbook
po/ga/: klickety.po
po/gl/: klickety.po
po/he/: klickety.po
po/hi/: klickety.po
po/hu/: klickety.po
po/ia/: klickety.po
po/id/: klickety.po
po/is/: klickety.po
po/it/: klickety.po
po/it/docs/klickety/: index.docbook
po/ja/: klickety.po
po/ka/: klickety.po
po/kk/: klickety.po
po/ko/: klickety.po
po/lt/: klickety.po
po/lv/: klickety.po
po/mai/: klickety.po
po/ml/: klickety.po
po/mr/: klickety.po
po/nb/: klickety.po
po/nds/: klickety.po
po/nl/: klickety.po
po/nl/docs/klickety/: index.docbook
po/nn/: klickety.po
po/pl/: klickety.po
po/pt/: klickety.po
po/pt/docs/klickety/: index.docbook
po/pt_BR/: klickety.po
po/pt_BR/docs/klickety/: index.docbook
po/ro/: klickety.po
po/ru/: klickety.po
po/sa/: klickety.po
po/sk/: klickety.po
po/sl/: klickety.po
po/sl/docs/klickety/: index.docbook
po/sr/: klickety.po
po/sr@ijekavian/: klickety.po
po/sr@ijekavianlatin/: klickety.po
po/sr@latin/: klickety.po
po/sv/: klickety.po
po/sv/docs/klickety/: index.docbook
po/tr/: klickety.po
po/ug/: klickety.po
po/uk/: klickety.po
po/uk/docs/klickety/: index.docbook
po/zh_CN/: klickety.po
po/zh_TW/: klickety.po
snap/: snapcraft.yaml
sounds/: CMakeLists.txt  README
src/: CMakeLists.txt  Messages.sh  customgameconfig.h  customgameconfig.ui  gameconfig.h  gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  klickety.qrc  klickety.upd  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.klickety.appdata.xml  org.kde.klickety.desktop  org.kde.ksame.appdata.xml  org.kde.ksame.desktop  piece.cpp  piece.h  undo.h
themes/: CMakeLists.txt  default.desktop  ksame.desktop  ksame_old.desktop
