install(FILES classic.svg default.desktop classic_preview.png DESTINATION ${KDE_INSTALL_DATADIR}/klickety/themes)
install(FILES ksame.svg ksame.desktop ksame_preview.png DESTINATION ${KDE_INSTALL_DATADIR}/klickety/themes)
install(FILES ksame_old.svg ksame_old.desktop ksame_old_preview.png DESTINATION ${KDE_INSTALL_DATADIR}/klickety/themes)
